syntax = "proto3";

package book;

import "google/protobuf/empty.proto";

option go_package = "proto/book;bookpb";

service BookService {
    rpc GetBook(GetBookRequest) returns (GetBookResponse);
    rpc ListBooks(google.protobuf.Empty) returns (ListBooksResponse);
    rpc CreateBook(CreateBookRequest) returns (CreateBookResponse);
    rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse);
    rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse);
    rpc SearchBooks(SearchBooksRequest) returns (SearchBooksResponse);
    rpc RecommendBooks(RecommendBooksRequest) returns (RecommendBooksResponse);
    rpc BorrowBook(BorrowBookRequest) returns (BorrowBookResponse);
    rpc ReturnBook(ReturnBookRequest) returns (ReturnBookResponse);
}

message Book {
    int64 id = 1;
    string title = 2;
    string author_id = 3;
    string category_id = 4;
    int32 stock = 5;
}

message GetBookRequest {
    int64 id = 1;
}

message GetBookResponse {
    Book book = 1;
}

message ListBooksResponse {
    repeated Book books = 1;
}

message CreateBookRequest {
    string title = 1;
    string author_id = 2;
    string category_id = 3;
    int32 stock = 4;
}

message CreateBookResponse {
    Book book = 1;
}

message UpdateBookRequest {
    int64 id = 1;
    string title = 2;
    string author_id = 3;
    string category_id = 4;
    int32 stock = 5;
}

message UpdateBookResponse {
    Book book = 1;
}

message DeleteBookRequest {
    int64 id = 1;
}

message DeleteBookResponse {
    Book book = 1;
}

message SearchBooksRequest {
    string query = 1;
}

message SearchBooksResponse {
    repeated Book books = 1;
}

message RecommendBooksRequest {
    int64 user_id = 1;
}

message RecommendBooksResponse {
    repeated Book books = 1;
}

message BorrowBookRequest {
    int64 book_id = 1;
    int64 user_id = 2;
}

message BorrowBookResponse {
    Book book = 1;
    string message = 2;
}

message ReturnBookRequest {
    int64 book_id = 1;
    int64 user_id = 2;
}

message ReturnBookResponse {
    Book book = 1;
    string message = 2;
}
